--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "daisyui": "^2.17.0",
     "next": "12.1.6",
     "react": "18.2.0",
